--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,10 @@ input:focus-visible {
 .conv .rightMsg {
   float: right;
 }
+
+.conv {
+  height: 85vh;
+  max-width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
